# local-semantic-search-claude-code-plugin

./: .gitignore  .mcp.json  LICENSE  README.md  docker-compose.semantic-search.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
cli/: __init__.py  main.py  watcher.py
codebase-indexing/: README.md  runtime.sh  setup.sh
codebase-indexing/assets/: added_tokens.json  tokenizer_config.json
hooks/: flush-watcher.sh  get-collection.py  hooks.json  run-watcher.py  start-watcher.sh
mcp_server/: __init__.py  cache.py  chunker.py  indexer.py  pyproject.toml  server.py
skills/codebase-onboard/: SKILL.md
skills/index-manage/: SKILL.md
skills/semantic-explore/: SKILL.md
