[project]
name = "local-semantic-search"
version = "0.2.0"
description = "MCP server and CLI for local semantic code search with indexing"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "watchfiles>=0.21.0",
    "typer>=0.9.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
]

[project.scripts]
codebase-index = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "cli"]
