[project]
name = "onlylocals-mcp-server"
version = "0.1.0"
description = "MCP server for local semantic code search"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "cache.py", "chunker.py", "indexer.py", "__init__.py"]

[project.scripts]
local-semantic-search = "server:main"
